[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/projectiles.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyBullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 2.99999 )

[node name="Bullet" type="RigidBody2D" groups=["Bullet"]]
rotation = 6.28319
script = ExtResource( 2 )

[node name="Sprites" type="Sprite" parent="."]
position = Vector2( 8.58307e-06, 2 )
rotation = 3.14159
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.33991e-05, 3 )
rotation = 3.14159
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3.5731e-05, 8 )
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.70478e-06, -1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
